# hsmecab

./: .gitignore  README.md  mecab.cabal  stack.yaml
Text/: MeCab.hsc
test/: Test.hs
