Name:                mecab
Version:             0.5.0
License:             BSD3
License-File:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Category:            Natural Language Processing
Synopsis:            A Haskell binding to MeCab
Description:
  A Haskell binding to MeCab <http://mecab.sourceforge.net/>
Homepage:            http://github.com/tanakh/hsmecab
Cabal-version:       >=1.8
Build-Type:          Simple

library
  build-depends:        base >= 4 && < 5
                      , bytestring >= 0.9 && < 0.11
                      , text >= 0.11 && < 2.0

  ghc-options:          -Wall -O2
  extra-libraries:      mecab

  Exposed-modules:
                        Text.MeCab

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , mecab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

Source-repository head
  Type:                 git
  Location:             git@github.com:nakaji-dayo/hsmecab.git
